--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
 }
 
 :root{
-    --azul-claro: #ADD8E6;
+    --azul-claro: #c0ecfb;
     --branco: #ffffff;
     --verde: #abedab;
     --cinza: #d3d3d3;
-    --azul-escuro: #003366;
+    --azul-escuro: #154575;
     --preto: #000000;
 }
 @media screen and (min-width:320px) {
     section {
+        margin: 0px;
+    }
+    table {
         margin: 0px;
     }
 
@@ -20,6 +23,9 @@
 
 @media screen and (min-width:500px) {
     section {
+        margin: 20px;
+    }
+    table{
         margin: 20px;
     }
 
@@ -39,7 +45,7 @@ body{
 }
 
 header{
-    padding: 30px;
+    padding: 30px 0px 0px 0px;
     text-shadow: 10px 10px 15px #000000d4;
 }
 
@@ -51,17 +57,19 @@ header > h1{
 main{
     box-shadow: 5px 10px 20px #000000de;
     background-color: var(--branco);
+    padding-top: -30px;
 }
 
 h2 {
-    padding-top: 25px;
-    padding-bottom: 10px;
+    text-align: left;
+    padding: 5px 5px 5px 15px;
+    background-image: linear-gradient(90deg, var(--cinza), var(--azul-claro), var(--branco));
 }
 
 section > p {
-    padding: 10px 20px;
     text-indent: 30px;
     line-height: 1.5em;
+    padding: 20px 0px 30px 0px;
 }
 
 li {
@@ -73,6 +81,7 @@ table {
     position: relative;
     border-collapse: collapse;
     text-align: center;
+    margin: 20px;
 }
 
 thead > tr > th {
@@ -92,4 +101,8 @@ th {
 td {
     border: 1px solid var(--preto);
     padding: 10px;
+}
+
+section#calculadora{
+
 }
