--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     }
     table {
         margin: 0px;
-        text-size: 10px;
+        font-size: 10px;
     }
 
 }
@@ -28,7 +28,7 @@
     }
     table{
         margin: 20px;
-        text-size: 14px;
+        font-size: 12px;
     }
 
 }
@@ -39,7 +39,7 @@
     }
     table{
         margin: 40px;
-        text-size: 16px;
+        font-size: 16px;
     }
        
 }
