--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
 body{
     min-width: 320px;
     max-width: 1024px;
-    margin: auto;
+    margin: 0px auto;
     background-image: linear-gradient(125deg, var(--azul-claro), var(--azul-escuro));
 }
 
@@ -64,6 +64,7 @@ main{
     box-shadow: 5px 10px 20px #000000de;
     background-color: var(--branco);
     padding-top: -30px;
+    margin: 0px;
 }
 
 h2 {
@@ -130,5 +131,11 @@ input {
 
 button {
     padding: 10px;
+}
 
+footer{
+    min-width: 320px;
+    max-width: 1024px;
+    margin: 0px auto;
+    text-align: center;
 }
