--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Estilos Gerais */
 @charset "UTF-8";
+
 * {
     padding: 0;
     margin: 0;
@@ -12,6 +13,7 @@
     --cinza: #dedddd;
     --azul-escuro: #154575;
     --preto: #000000;
+    --fonte-montserrat: "Montserrat", sans-serif; /* Variável de fonte Montserrat */
 }
 
 /* Estilos Responsivos */
@@ -51,11 +53,12 @@ body {
     max-width: 1024px;
     margin: auto;
     background-image: linear-gradient(125deg, var(--azul-claro), var(--azul-escuro));
+    font-family: var(--fonte-montserrat); /* Aplicando a variável de fonte ao corpo do documento */
 }
 
 /* Estilos do Cabeçalho */
 header {
-    padding: 30px 0px;
+    padding: 30px 0;
     text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.83);
 }
 
@@ -77,7 +80,7 @@ h2 {
     background: linear-gradient(90deg, var(--azul-claro), var(--branco));
 }
 
-section p {
+section.conteudo p {
     text-indent: 30px;
     line-height: 1.5;
     padding: 20px 0;
@@ -109,26 +112,40 @@ th, td {
     padding: 10px;
 }
 
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
 /* Estilos da Calculadora */
 .conjunto_valores {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5em;
+}
+
+#calculadora > p, .conjunto_valores > p{
+    padding: 10px;
 }
 
 .conjunto_valores input {
     flex: 1 0 10rem;
     padding: 1em;
+}
+
+#saida{
+    padding: 20px;
+    margin: 20px 20px 0px 20px;
+    background-color: #00fbc52c;
+}
+
+#saida > p#nada, #saida > p#erro{
+    border-radius: 30px;
+}
+
+#saida > p:not(#nada), #saida > p:not(#erro){
+    border-radius: 30px 30px 0px 0px;
+}
+
+#limpeza{
+    margin: 0px 20px 20px 20px;
+    padding: auto auto 20px auto;
+    background-color: #00fbc52c;
+    border-radius: 0px 0px 30px 30px;
 }
 
 button {
@@ -137,6 +154,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: var(--fonte-montserrat); /* Aplicando a variável de fonte aos botões */
 }
 
 /* Botão Verde */
@@ -159,6 +177,11 @@ button#reset:hover {
     background-color: #ff6666;
 }
 
+ul {
+    list-style-position: inside;
+    line-height: 2em;
+}
+
 /* Footer */
 footer {
     background-color: rgb(67, 74, 132);
@@ -167,7 +190,8 @@ footer {
     box-shadow: rgba(44, 44, 44, 0.537) 4px 4px 4px;
     max-width: 1024px;
     min-width: 320px;
-    margin: 0px auto 30px;
+    margin: 0 auto 30px;
     padding: 10px;
     text-align: center;
+    font-family: var(--fonte-montserrat); /* Aplicando a variável de fonte ao rodapé */
 }
