--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ h2 {
     text-align: left;
     padding: 10px 15px;
     background: linear-gradient(90deg, var(--azul-claro), var(--branco));
+    border-radius: 8px 8px 0 0;
 }
 
 section.conteudo p {
@@ -131,22 +132,23 @@ th, td {
     padding: 20px;
     margin: 20px 20px 0px 20px;
     background-color: #00fbc52c;
-}
-
-#saida > p#nada, #saida > p#erro{
     border-radius: 30px;
 }
 
+#erro{
+    border-radius: 5px;
+}
+
+/*
 #saida > p:not(#nada), #saida > p:not(#erro){
     border-radius: 30px 30px 0px 0px;
 }
-
 #limpeza{
     margin: 0px 20px 20px 20px;
     padding: auto auto 20px auto;
     background-color: #00fbc52c;
     border-radius: 0px 0px 30px 30px;
-}
+}*/
 
 button {
     padding: 10px;
